fix: Standardize brand name to TISLITCosmetics
Updates the brand name to use uppercase "TISLITCosmetics" consistently across the project. This includes `package.json`, `index.html`, `metadata.json`, and various React components for branding alignment.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TisalitCosmetics</title>
-    <meta name="description" content="موقع تجارة إلكترونية احترافي وأنيق لبراند TisalitCosmetics. متخصصون في مستحضرات التجميل عالية الجودة. تصميم عصري وتجربة تسوق فريدة عبر الواتساب.">
+    <title>TISLITCosmetics</title>
+    <meta name="description" content="موقع تجارة إلكترونية احترافي وأنيق لبراند TISLITCosmetics. متخصصون في مستحضرات التجميل عالية الجودة. تصميم عصري وتجربة تسوق فريدة عبر الواتساب.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" rel="stylesheet">
